--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "start": "remix-serve ./build/server/index.js"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.4",
     "@remix-run/node": "^2.9.1",
     "@remix-run/react": "^2.9.1",
     "@remix-run/serve": "^2.9.1",
     "isbot": "^4.1.0",
     "neo4j-driver": "^5.20.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.1",
