--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "remix-serve ./build/server/index.js"
   },
   "dependencies": {
+    "@mui/base": "^5.0.0-beta.40",
     "@reduxjs/toolkit": "^2.2.4",
     "@remix-run/node": "^2.9.1",
     "@remix-run/react": "^2.9.1",
@@ -24,7 +25,7 @@
     "@remix-run/dev": "^2.9.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.38.0",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
